<resources>
    <string name="app_name">Boxes</string>
    <string name="box_one_text">Box One</string>
    <string name="box_two_text">Box Two</string>
    <string name="box_three_text">Box Three</string>
    <string name="box_four_text">Box Four</string>
    <string name="box_five_text">Box Five</string>

<!--    Buttons-->
    <string name="button_red">Red</string>
    <string name="button_green">Green</string>
    <string name="button_yellow">Yellow</string>
    <string name="btn_text">Toggle</string>
</resources>
