<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mi_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/box_one_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#9C27B0"
        android:text="@string/box_one_text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/box_two_text"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="@dimen/margin_top"
        android:background="#FF9800"
        android:gravity="center_vertical"
        android:text="@string/box_two_text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_one_text" />

    <TextView
        android:id="@+id/box_three_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeftAll"
        android:layout_marginRight="@dimen/marginRightAll"
        android:background="#2196F3"
        android:text="@string/box_three_text"
        android:textAlignment="center"
        android:textSize="@dimen/fontSize"
        app:layout_constraintBottom_toTopOf="@+id/box_four_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/box_two_text"
        app:layout_constraintTop_toTopOf="@+id/box_two_text"
        android:layout_marginStart="@dimen/marginLeftAll" />

    <TextView
        android:id="@+id/box_four_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeftAll"
        android:layout_marginTop="16dp"
        android:layout_marginRight="@dimen/marginRightAll"
        android:layout_marginBottom="16dp"
        android:background="#CDDC39"
        android:text="@string/box_four_text"
        android:textAlignment="center"
        android:textSize="@dimen/fontSize"
        app:layout_constraintBottom_toTopOf="@+id/box_five_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/box_two_text"
        app:layout_constraintTop_toBottomOf="@+id/box_three_text" />

    <TextView
        android:id="@+id/box_five_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeftAll"
        android:layout_marginRight="@dimen/marginRightAll"
        android:background="#00BCD4"
        android:text="@string/box_five_text"
        android:textAlignment="center"
        android:textSize="@dimen/fontSize"
        app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/box_two_text"
        app:layout_constraintTop_toBottomOf="@+id/box_four_text" />

    <Button
        android:id="@+id/toggle_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/Coral"
        android:text="@string/btn_text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:textSize="@dimen/fontSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_two_text"
        app:layout_constraintVertical_bias="0.90999997" />

</androidx.constraintlayout.widget.ConstraintLayout>